# truespakle

./: .env  .gitignore  Dockerfile  gunicorn.conf.py  pyproject.toml
app/: __init__.py  routes.py
app/static/css/: style.css
app/static/js/: main.js
templates/: base.html  index.html
templates/sections/: about.html  contact.html  faq.html  footer.html  hero.html  nav.html  services.html  testimonials.html
