[tool.poetry]
name = "flask-spa"
version = "0.1.0"
description = "Flask SPA Application"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
python-dotenv = "^1.0.0"
Flask-Mail = "^0.9.1"
gunicorn = "^21.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 